force-app/main/default/objects/VG_Policy_Schedule_Asset__c/VG_Policy_Schedule_Asset__c.object-meta.xml
<CustomObject>
    <label>Risk Rating</label>
    <nameField>
        <label>Risk Rating Ref.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Rating</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>