force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/Annual_Rate_100__c.field-meta.xml
<CustomField>
    <fullName>Annual_Rate_100__c</fullName>
    <label>Annual Premium Share</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>