force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Risk Rating</relationshipLabel>
    <relationshipName>Risk_Rating</relationshipName>
    <type>Lookup</type>
</CustomField>