force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/Technical_UW_Premium__c.field-meta.xml
<CustomField>
    <fullName>Technical_UW_Premium__c</fullName>
    <label>Technical UW Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>