force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Address2__c.field-meta.xml
<CustomField>
    <fullName>VG_Address2__c</fullName>
    <label>Address2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>