force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Aggregate_Precent__c.field-meta.xml
<CustomField>
    <fullName>VG_Aggregate_Precent__c</fullName>
    <label>Aggregate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>