force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Attachment__c.field-meta.xml
<CustomField>
    <fullName>VG_Attachment__c</fullName>
    <label>Attachment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>