force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Avg_SI__c.field-meta.xml
<CustomField>
    <fullName>VG_Avg_SI__c</fullName>
    <label>Avg SI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>