force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Base_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Base_Premium_Rate__c</fullName>
    <label>Rate (%)</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>