force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_BI_Indemnity_Period__c.field-meta.xml
<CustomField>
    <fullName>VG_BI_Indemnity_Period__c</fullName>
    <label>BI Indemnity Period</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>