force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Bordereax_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Bordereax_Date__c</fullName>
    <label>Bordereax Date</label>
    <type>Date</type>
</CustomField>