force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Brokerage__c.field-meta.xml
<CustomField>
    <fullName>VG_Brokerage__c</fullName>
    <label>Brokerage Amount (Original Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>