force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Building_Discount_Loading__c.field-meta.xml
<CustomField>
    <fullName>VG_Building_Discount_Loading__c</fullName>
    <label>Building Discount Loading</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>