force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_CC_Information__c.field-meta.xml
<CustomField>
    <fullName>VG_CC_Information__c</fullName>
    <label>CC Information</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>