force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Cession__c.field-meta.xml
<CustomField>
    <fullName>VG_Cession__c</fullName>
    <label>Cession</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>