force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_CH_Commission__c.field-meta.xml
<CustomField>
    <fullName>VG_CH_Commission__c</fullName>
    <label>CH Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>