force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Country__c.field-meta.xml
<CustomField>
    <fullName>VG_Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>