force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Coverage__c.field-meta.xml
<CustomField>
    <fullName>VG_Coverage__c</fullName>
    <label>Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>M3 - Fully Comprehensive</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Fire &amp; Theft</fullName>
            </value>
            <value>
                <fullName>M6 - Third Party Only</fullName>
            </value>
            <value>
                <fullName>M6 - Fire &amp; Theft Only</fullName>
            </value>
            <value>
                <fullName>All perils</fullName>
            </value>
            <value>
                <fullName>Terrorism</fullName>
            </value>
            <value>
                <fullName>Fire and allied perils</fullName>
            </value>
            <value>
                <fullName>CAR</fullName>
            </value>
            <value>
                <fullName>EAR</fullName>
            </value>
            <value>
                <fullName>Motor Hull</fullName>
            </value>
            <value>
                <fullName>Loss of profit</fullName>
            </value>
            <value>
                <fullName>CatNat</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Combined Flight-Launch Vehicle Flight</fullName>
            </value>
            <value>
                <fullName>Combined Flight-Post Separation</fullName>
            </value>
            <value>
                <fullName>Comined Flight-In-Orbit</fullName>
            </value>
            <value>
                <fullName>In-Orbit</fullName>
            </value>
            <value>
                <fullName>Launch Vehicle Flight Only</fullName>
            </value>
            <value>
                <fullName>Assembly,Intetgratio and Testing</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Pre-Launch</fullName>
            </value>
            <value>
                <fullName>Engine Testing</fullName>
            </value>
            <value>
                <fullName>Launch Third Party Liabilities</fullName>
            </value>
            <value>
                <fullName>In-Orbit Third Party Liabilities</fullName>
            </value>
            <value>
                <fullName>MF-Overseas PD PL ex USA</fullName>
                <label>MF-Overseas PD TPL ex USA</label>
            </value>
            <value>
                <fullName>MP-EU PD TPL ex UK</fullName>
            </value>
            <value>
                <fullName>Named Perils</fullName>
            </value>
            <value>
                <fullName>All Risk</fullName>
            </value>
            <value>
                <fullName>Business Interruption</fullName>
            </value>
            <value>
                <fullName>Office Comprehensive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>