force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>VG_Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full cover</fullName>
            </value>
            <value>
                <fullName>TLO (Total Loss Only)</fullName>
            </value>
            <value>
                <fullName>Incentives</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Investor Protection</fullName>
            </value>
            <value>
                <fullName>Contingency</fullName>
            </value>
            <value>
                <fullName>IPI</fullName>
            </value>
            <value>
                <fullName>TLO</fullName>
            </value>
            <value>
                <fullName>LOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>