force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>VG_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>