force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>VG_Declared_Value__c</fullName>
    <label>Declared Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>