force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Deductible__c.field-meta.xml
<CustomField>
    <fullName>VG_Deductible__c</fullName>
    <label>Deductible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>