force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Deposit_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Deposit_Premium__c</fullName>
    <label>Deposit Premium(%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>