force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Deposit_Premium_Formula__c.field-meta.xml
<CustomField>
    <fullName>VG_Deposit_Premium_Formula__c</fullName>
    <formula>VG_Deposit_Premium__c * VG_Risk_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Premium Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>