force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Event_Limit__c.field-meta.xml
<CustomField>
    <fullName>VG_Event_Limit__c</fullName>
    <label>Event Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>