force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Expected_Loss_Ratio__c.field-meta.xml
<CustomField>
    <fullName>VG_Expected_Loss_Ratio__c</fullName>
    <label>Expected Loss Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>