force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Fee_Amounts__c.field-meta.xml
<CustomField>
    <fullName>VG_Fee_Amounts__c</fullName>
    <label>Fee Amounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>