force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Franchise__c.field-meta.xml
<CustomField>
    <fullName>VG_Franchise__c</fullName>
    <label>Franchise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>