force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Gross_Written_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Gross_Written_Premium__c</fullName>
    <label>Gross Written Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>