force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Information__c.field-meta.xml
<CustomField>
    <fullName>VG_Information__c</fullName>
    <label>Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>