force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Insured_Name__c.field-meta.xml
<CustomField>
    <fullName>VG_Insured_Name__c</fullName>
    <label>Insured Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>