force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Limit_Precent__c.field-meta.xml
<CustomField>
    <fullName>VG_Limit_Precent__c</fullName>
    <label>Limit(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>