force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Loss_Ratio_for_Max__c.field-meta.xml
<CustomField>
    <fullName>VG_Loss_Ratio_for_Max__c</fullName>
    <label>Loss Ratio for Max.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>