force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Management_Expenses_for_PC__c.field-meta.xml
<CustomField>
    <fullName>VG_Management_Expenses_for_PC__c</fullName>
    <label>Management Expenses (for PC) %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>