force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_MB_PD_Deductible__c.field-meta.xml
<CustomField>
    <fullName>VG_MB_PD_Deductible__c</fullName>
    <label>MB PD Deductible</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>