force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Min_Ceding_Commission__c.field-meta.xml
<CustomField>
    <fullName>VG_Min_Ceding_Commission__c</fullName>
    <label>Min. Ceding Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>