force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Min_Rate__c.field-meta.xml
<CustomField>
    <fullName>VG_Min_Rate__c</fullName>
    <label>Min Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>