force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Minimum_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Minimum_Premium__c</fullName>
    <label>Minimum Premium(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>