force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Net_BI_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Net_BI_Premium__c</fullName>
    <label>Net BI Premium</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>