force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Net_PD_Premium__c.field-meta.xml
<CustomField>
    <fullName>VG_Net_PD_Premium__c</fullName>
    <label>Net PD Premium</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>