force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_No_Claims_Bonus__c.field-meta.xml
<CustomField>
    <fullName>VG_No_Claims_Bonus__c</fullName>
    <label>No Claims Bonus(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>