force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_No_Claims_Bonus_Value__c.field-meta.xml
<CustomField>
    <fullName>VG_No_Claims_Bonus_Value__c</fullName>
    <formula>VG_No_Claims_Bonus__c * VG_Risk_Premium__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No Claims Bonus Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>