force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_No_of_Surplus_Lines__c.field-meta.xml
<CustomField>
    <fullName>VG_No_of_Surplus_Lines__c</fullName>
    <label>No. of Surplus Lines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>