force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Number_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>VG_Number_of_Vehicles__c</fullName>
    <label>Number of Vehicles</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>