force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_OtherRisk__c.field-meta.xml
<CustomField>
    <fullName>VG_OtherRisk__c</fullName>
    <label>OtherRisk</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>