force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Payment_Ref__c.field-meta.xml
<CustomField>
    <fullName>VG_Payment_Ref__c</fullName>
    <label>Payment Ref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>