force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>VG_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Qtrly</fullName>
            </value>
            <value>
                <fullName>Bi-annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Half yearly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>