force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_PD_Deductible__c.field-meta.xml
<CustomField>
    <fullName>VG_PD_Deductible__c</fullName>
    <label>PD Deductible</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>