force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Perils__c.field-meta.xml
<CustomField>
    <fullName>VG_Perils__c</fullName>
    <label>Perils</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number of members</fullName>
            </value>
            <value>
                <fullName>Turnover</fullName>
            </value>
            <value>
                <fullName>Buildings</fullName>
            </value>
            <value>
                <fullName>Outbuildings / Storage containers</fullName>
            </value>
            <value>
                <fullName>Machinery, Plant and All Other Contents</fullName>
            </value>
            <value>
                <fullName>Computer and Electronic Equipment</fullName>
            </value>
            <value>
                <fullName>Gaming, Amusement and Entertainment Equipment</fullName>
            </value>
            <value>
                <fullName>Plate Glass</fullName>
            </value>
            <value>
                <fullName>Stock of Food &amp; General</fullName>
            </value>
            <value>
                <fullName>Stock of Wines, Spirits &amp; Tobacco</fullName>
            </value>
            <value>
                <fullName>Detioration of Stock</fullName>
            </value>
            <value>
                <fullName>Rent Payable</fullName>
            </value>
            <value>
                <fullName>Gross Profit</fullName>
            </value>
            <value>
                <fullName>Gross Revenue</fullName>
            </value>
            <value>
                <fullName>ICOW</fullName>
            </value>
            <value>
                <fullName>Book Debts</fullName>
            </value>
            <value>
                <fullName>Per Premises</fullName>
            </value>
            <value>
                <fullName>Any one Transit</fullName>
            </value>
            <value>
                <fullName>Annual Carryings</fullName>
            </value>
            <value>
                <fullName>Money in Safes</fullName>
            </value>
            <value>
                <fullName>Business Hours</fullName>
            </value>
            <value>
                <fullName>Gaming Machine</fullName>
            </value>
            <value>
                <fullName>Non Negotiable</fullName>
            </value>
            <value>
                <fullName>Employee Effects</fullName>
            </value>
            <value>
                <fullName>Private Dwelling</fullName>
            </value>
            <value>
                <fullName>Any one Loss</fullName>
            </value>
            <value>
                <fullName>Clerical &amp; Managerial</fullName>
            </value>
            <value>
                <fullName>Bar/Catering/Retail/Cleaning</fullName>
            </value>
            <value>
                <fullName>Coaches/Instructors/Players</fullName>
            </value>
            <value>
                <fullName>Maintenance/Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>