force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Perils_Text__c.field-meta.xml
<CustomField>
    <fullName>VG_Perils_Text__c</fullName>
    <label>Perils Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>