force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Policy_Basis__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Basis__c</fullName>
    <label>Policy Basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claims Made</fullName>
            </value>
            <value>
                <fullName>Claims Occurred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>