force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Policy_Cover_End_Date__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_Cover_End_Date__c</fullName>
    <label>Policy Cover End Date</label>
    <type>Date</type>
</CustomField>