force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Policy_No__c.field-meta.xml
<CustomField>
    <fullName>VG_Policy_No__c</fullName>
    <label>Policy No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>