force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Postcode__c.field-meta.xml
<CustomField>
    <fullName>VG_Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>