force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Profession__c.field-meta.xml
<CustomField>
    <fullName>VG_Profession__c</fullName>
    <label>Profession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBA</fullName>
            </value>
            <value>
                <fullName>Audit, Accountancy, Company Tax - Quoted Companies &amp; PLCs</fullName>
            </value>
            <value>
                <fullName>Audit, Accountancy, Company Tax - Financial Institutions</fullName>
            </value>
            <value>
                <fullName>Audit, Accountancy, Company Tax - Unquoted Companies</fullName>
            </value>
            <value>
                <fullName>General Accountancy &amp; Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Personal Taxation</fullName>
            </value>
            <value>
                <fullName>Insolvency, Liquidiation  Receivership</fullName>
            </value>
            <value>
                <fullName>Mergers &amp; Acquisitions and Corporate Finance</fullName>
            </value>
            <value>
                <fullName>Secretarial and Share registration</fullName>
            </value>
            <value>
                <fullName>Executorships &amp; Trusteeships</fullName>
            </value>
            <value>
                <fullName>Directorships</fullName>
            </value>
            <value>
                <fullName>Generial Insurance Commissions</fullName>
            </value>
            <value>
                <fullName>Stock &amp; Share commissions</fullName>
            </value>
            <value>
                <fullName>Other Investment Commissions</fullName>
            </value>
            <value>
                <fullName>Management Consultancy</fullName>
            </value>
            <value>
                <fullName>Computer Consultancy</fullName>
            </value>
            <value>
                <fullName>Individual Voluntary Arrangements</fullName>
            </value>
            <value>
                <fullName>Tax Mitigation Schemes</fullName>
            </value>
            <value>
                <fullName>Other Work (Low risk)</fullName>
            </value>
            <value>
                <fullName>Other Work (Medium risk)</fullName>
            </value>
            <value>
                <fullName>Other Work (High risk)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>