force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Rate_change__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_change__c</fullName>
    <label>Rate change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>