force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Rate_on_Income__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_on_Income__c</fullName>
    <label>Rate on Income</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Percent</type>
</CustomField>