force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Rate_Per_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>VG_Rate_Per_Vehicle__c</fullName>
    <label>Annual Rate Per Vehicle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>