force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Registration_Plate__c.field-meta.xml
<CustomField>
    <fullName>VG_Registration_Plate__c</fullName>
    <label>Registration Plate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>