force-app/main/default/objects/VG_Policy_Schedule_Asset__c/fields/VG_Retention__c.field-meta.xml
<CustomField>
    <fullName>VG_Retention__c</fullName>
    <label>Retention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>